--- a/PUBLIC/special_hotel.html
+++ b/PUBLIC/special_hotel.html
@@ -46,7 +46,9 @@
       <div class="box">
         <div class="card1">
           <a href="javascript:;">
-            <img src="img/special_hotel/01.jpg" alt="">
+            <div class="imghor">
+              <img src="img/special_hotel/01.jpg" alt="">
+            </div>
             <div>
               <h3>Yiu Fai Guest House</h3>
               <h4>New Yiu Fai Guest House</h4>
@@ -59,7 +61,9 @@
         </div>
         <div class="card1">
           <a href="javascript:;">
-            <img src="img/special_hotel/01.jpg" alt="">
+            <div class="imghor">
+              <img src="img/special_hotel/01.jpg" alt="">
+            </div>
             <div>
               <h3>Yiu Fai Guest House</h3>
               <h4>New Yiu Fai Guest House</h4>
@@ -72,7 +76,9 @@
         </div>
         <div class="card1">
           <a href="javascript:;">
-            <img src="img/special_hotel/01.jpg" alt="">
+            <div class="imghor">
+              <img src="img/special_hotel/01.jpg" alt="">
+            </div>
             <div>
               <h3>Yiu Fai Guest House</h3>
               <h4>New Yiu Fai Guest House</h4>
@@ -85,7 +91,9 @@
         </div>
         <div class="card1">
           <a href="javascript:;">
-            <img src="img/special_hotel/01.jpg" alt="">
+            <div class="imghor">
+              <img src="img/special_hotel/01.jpg" alt="">
+            </div>
             <div>
               <h3>Yiu Fai Guest House</h3>
               <h4>New Yiu Fai Guest House</h4>
@@ -98,7 +106,9 @@
         </div>
         <div class="card1">
           <a href="javascript:;">
-            <img src="img/special_hotel/01.jpg" alt="">
+            <div class="imghor">
+              <img src="img/special_hotel/01.jpg" alt="">
+            </div>
             <div>
               <h3>Yiu Fai Guest House</h3>
               <h4>New Yiu Fai Guest House</h4>
@@ -111,7 +121,9 @@
         </div>
         <div class="card1">
           <a href="javascript:;">
-            <img src="img/special_hotel/01.jpg" alt="">
+            <div class="imghor">
+              <img src="img/special_hotel/01.jpg" alt="">
+            </div>
             <div>
               <h3>Yiu Fai Guest House</h3>
               <h4>New Yiu Fai Guest House</h4>
@@ -124,7 +136,9 @@
         </div>
         <div class="card1">
           <a href="javascript:;">
-            <img src="img/special_hotel/01.jpg" alt="">
+            <div class="imghor">
+              <img src="img/special_hotel/01.jpg" alt="">
+            </div>
             <div>
               <h3>Yiu Fai Guest House</h3>
               <h4>New Yiu Fai Guest House</h4>
@@ -137,7 +151,9 @@
         </div>
         <div class="card1">
           <a href="javascript:;">
-            <img src="img/special_hotel/01.jpg" alt="">
+            <div class="imghor">
+              <img src="img/special_hotel/01.jpg" alt="">
+            </div>
             <div>
               <h3>Yiu Fai Guest House</h3>
               <h4>New Yiu Fai Guest House</h4>
@@ -150,7 +166,9 @@
         </div>
         <div class="card1">
           <a href="javascript:;">
-            <img src="img/special_hotel/01.jpg" alt="">
+            <div class="imghor">
+              <img src="img/special_hotel/01.jpg" alt="">
+            </div>
             <div>
               <h3>Yiu Fai Guest House</h3>
               <h4>New Yiu Fai Guest House</h4>
@@ -163,7 +181,9 @@
         </div>
         <div class="card1">
           <a href="javascript:;">
-            <img src="img/special_hotel/01.jpg" alt="">
+            <div class="imghor">
+              <img src="img/special_hotel/01.jpg" alt="">
+            </div>
             <div>
               <h3>Yiu Fai Guest House</h3>
               <h4>New Yiu Fai Guest House</h4>
@@ -176,20 +196,24 @@
         </div>
         <div class="card1">
           <a href="javascript:;">
-            <img src="img/special_hotel/01.jpg" alt="">
+            <div class="imghor">
+              <img src="img/special_hotel/01.jpg" alt="">
+            </div>
             <div>
               <h3>Yiu Fai Guest House</h3>
               <h4>New Yiu Fai Guest House</h4>
               <p><span class="sp1">8.3</span><span>非常好</span><span>一级实惠</span></p>
               <p class="p1"><img src="img/special_hotel/dz.png" alt="">距离星光大道0.55km</p>
               <span class="sp2">￥780</span>
-              <span class="sp3"><span>￥</span>171<em>起</em></span>
+              <span class="sp3"><span>￥</span>181<em>起</em></span>
             </div>
           </a>
         </div>
         <div class="card1">
           <a href="javascript:;">
-            <img src="img/special_hotel/01.jpg" alt="">
+            <div class="imghor">
+              <img src="img/special_hotel/01.jpg" alt="">
+            </div>
             <div>
               <h3>Yiu Fai Guest House</h3>
               <h4>New Yiu Fai Guest House</h4>
@@ -200,6 +224,7 @@
             </div>
           </a>
         </div>
+
 
 
       </div>
