--- a/PUBLIC/login.html
+++ b/PUBLIC/login.html
@@ -5,69 +5,61 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="css/reg.css">
+    <link rel="stylesheet" href="css/login.css">
     <link rel="stylesheet" href="css/foot.css">
 </head>
 <body>
   	<div class="content">
-      <div class="login">
-        <div class="login-logo">
-          <img src="img/login/41bd0a522fbeb024a41208a408ca73ec.png" alt="">
-          <span>注册</span>
-        </div>
-
-        <div class="login-content">
-            <div class="section">
-                <select class="select">
-                  <option value="">86</option>
-                  <option value="">阿尔巴尼亚(355)</option>
-                  <option value="">阿尔及利亚(213)</option>
-                  <option value="">阿富汗(93)</option>
-                  <option value="">阿根廷(54)</option>
-                  <option value="">阿根廷(54)</option>
-                  <option value="">阿根廷(54)</option>
-                  <option value="">阿根廷(54)</option>
-                  <option value="">阿根廷(54)</option>
-                  <option value="">阿根廷(54)</option>
-                  <option value="">阿根廷(54)</option>
-                  <option value="">阿根廷(54)</option>
-                  <option value="">阿根廷(54)</option>
-                  <option value="">阿根廷(54)</option>
-                  <option value="">阿根廷(54)</option>
-                  <option value="">阿根廷(54)</option>
-                 </select>
-                 <input type="text "  placeholder="输入用于登录的手机号码">
-                 
-              </div>
-              <div>&nbsp;</div>
-              <div class="code-wrap gen-wrap">
-                <input type="text"placeholder="图片识别码">
-                <img src="https://passport.qyer.com/qcross/passport/captcha?scene=mobile_register_sms&timer=1566092034396" alt="">
-              </div>
-              <div>&nbsp;</div>
-              <div class="code-wrap gen-wrap">
-                  <input type="text" placeholder="输入短信中的验证码">
-                  <button>发送验证码</button>
-              </div>
-              <div>&nbsp;</div>
-              <input type="text" class="input"placeholder="起一个具有辨识度的用户名">
-              <div>&nbsp;</div>
-              <input type="text" class="input"placeholder="输出8-16位密码,需包含字母和数字">
-              <div>&nbsp;</div>
-              <button class="reg-button">注册</button>
-              <div>&nbsp;</div>
-              <div class="text-align">
-              <span style="float: left">已有穷账号?<a href="javascript:;">登录</a></span>
-              <span style="float: right">
-                同意
-                <a href="javascript:;">会员条款</a>
-                和
-                <a href="javascript:;">免责申明</a>
-              </span>
-              </div>
-        </div>
+      <div class="login-logo">
+        <img src="img/login/41bd0a522fbeb024a41208a408ca73ec.png" alt=>
+        <span>登录</span>
       </div>
-    </div>
+      <div class="login-section">
+        <div class="hover">账号登录</div>
+        <div class="hover">短信快捷登录</div>
+        <div class="username">
+            关于穷游网将实行<a href="javascript:;">手机绑定实名制的说明</a>
+        </div>
+        <div class="section">
+            <select class="select">
+              <option value="">86</option>
+              <option value="">阿尔巴尼亚(355)</option>
+              <option value="">阿尔及利亚(213)</option>
+              <option value="">阿富汗(93)</option>
+              <option value="">阿根廷(54)</option>
+              <option value="">阿根廷(54)</option>
+              <option value="">阿根廷(54)</option>
+              <option value="">阿根廷(54)</option>
+              <option value="">阿根廷(54)</option>
+              <option value="">阿根廷(54)</option>
+              <option value="">阿根廷(54)</option>
+              <option value="">阿根廷(54)</option>
+              <option value="">阿根廷(54)</option>
+              <option value="">阿根廷(54)</option>
+              <option value="">阿根廷(54)</option>
+              <option value="">阿根廷(54)</option>
+             </select>
+             <input type="text "  placeholder="手机号">
+          </div>
+          <div class="ewm">
+            <input type="text" placeholder="图片识别二维码">
+            <img src="https://passport.qyer.com/qcross/passport/captcha?scene=smslogin" alt="">
+          </div>
+          <div class="input-group">
+            <input type="text" placeholder="输入短信中的验证码">
+            <button>发送验证码</button>
+          </div>
+          <div class="login-button">
+            <button>登录</button>
+          </div>
+          <div>
+            <img src="img/login/tb.png" alt="">
+            <img src="img/login/qq.png" alt="">
+            <img src="img/login/wx.png" alt="">
+            <img src="img/login/wb.png" alt="">
+          </div>
+      </div>
+    </div>   
     <div class="footer">
       <div class="footer-bottom">
           <div class="title">
