--- a/PUBLIC/tips.html
+++ b/PUBLIC/tips.html
@@ -2819,7 +2819,7 @@
                         </div>
                         <ul class="pagination offset-3">
                             <li class="page-item disabled"><a href=""
-                                    class="page-link rounded border-0 text-dark font-weight-bold mx-1">上一页</a></li>
+                                    class="page-link rounded border-0 text-dark font-weight-bold mx-1 fs-32">&lt;</a></li>
                             <li class="page-item active"><a href=""
                                     class="page-link rounded border-0 text-dark font-weight-bold mx-1">1</a></li>
                             <li class="page-item"><a href=""
@@ -2841,7 +2841,7 @@
                             <li class="page-item"><a href=""
                                     class="page-link rounded border-0 text-dark font-weight-bold mx-1">10</a></li>
                             <li class="page-item"><a href=""
-                                    class="page-link rounded border-0 text-dark font-weight-bold mx-1">下一页</a></li>
+                                    class="page-link rounded border-0 text-dark font-weight-bold mx-1 fs-32">&gt;</a></li>
                         </ul>
                     </div>
                 </div>
