--- a/PUBLIC/ami_place.html
+++ b/PUBLIC/ami_place.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-  <div class="container-fluid">
+  <div class="container-fluid px-0">
     <!--搜索焦点图-->
     <div class="banner">
       <table></table>
@@ -2532,6 +2532,8 @@
       </div>
     </div>
   </div>
+  <iframe src="ts-foot.html" frameborder="0" style="width: 100%;height: 187px;"></iframe>
+</div>
 </body>
 <script src="js/ami.place.js"></script>
 <script>
