--- a/PUBLIC/special_hotel.html
+++ b/PUBLIC/special_hotel.html
@@ -414,7 +414,7 @@
   </div>
   </div>
 
-
+  <iframe src="ts-foot.html" frameborder="0" style="width: 100%;height: 187px;"></iframe>
   </div>
 </body>
 
