--- a/PUBLIC/ts-foot.html
+++ b/PUBLIC/ts-foot.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-  <div class="container-fluid">
+  <div class="container-fluid px-0">
       <div class="footer">
           <div class="center">
               <p>
