--- a/PUBLIC/ami_place.html
+++ b/PUBLIC/ami_place.html
@@ -23,8 +23,8 @@
       <h1>你好，世界！</h1>
       <div class="search">
         <input type="text" placeholder="搜索国家、城市、目的地">
-        <div class="search-right">
-          <a href="">搜索</a>
+        <div class="search-right">          
+          <a href=""><span></span>搜索</a>
         </div>
       </div>
     </div>
